# clonablechild

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
src/: lib.rs  unix.rs  windows.rs
tests/: kill_subprocess.rs
